# Web-Server-Rust

./: .gitignore  Cargo.toml  README.md  cert.pem  config.yaml  dockerfile  key.pem  package-lock.json  public.key  secret.key
backend/: app.py
frontend/: index.html
hello/: Cargo.toml
hello/src/: lib.rs
keys/: trusted_keys.json
plugin/: Cargo.toml
plugin/src/: lib.rs
plugins/: hello-signed.wasm  hello.wasm  plugin.wasm
plugins/example_plugin/: example.wasm
src/: cache.rs  config.rs  main.rs  plugins.rs  router.rs  server.rs  websocket.rs
static/: index.html
