[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["http2", "full"] }
tokio-tungstenite = "0.21"
dashmap = { version = "7.0.0-rc2" }
lazy_static = "1.4"
wasmtime = "16.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio-rustls = "0.23"
rustls = "0.23"
quinn = "0.11"   
h3 = "0.0.8"   
rustls-pemfile = "1"
notify = "6.1"
wasmtime-wasi = "16"
futures = "0.3"
serde_json = "1.0.145"
wasmsign2 = "0.2.6"

